--- a/app/src/main/res/layout/base_toolbar.xml
+++ b/app/src/main/res/layout/base_toolbar.xml
@@ -15,13 +15,14 @@
         <TextView
             android:id="@+id/barTitle"
             android:textStyle="bold"
+            android:textSize="@dimen/SizePrimary"
             android:layout_width="wrap_content"
             android:textColor="@android:color/white"
             android:layout_gravity="center"
             android:layout_height="wrap_content" />
         <FrameLayout
             android:layout_gravity="right"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize">
             <TextView
@@ -33,7 +34,7 @@
             <ImageView
                 android:id="@+id/barMenu_img"
                 android:gravity="center"
-                android:layout_margin="20dp"
+                android:layout_margin="13dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </FrameLayout>
