--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="SizeTitle">17sp</dimen>
+    <dimen name="SizePrimary">16sp</dimen>
+    <dimen name="SizeContent">14sp</dimen>
 </resources>
